four 完成定时,初步完成

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 dataxPath=E:/yonyou/DataTransfer/datax/bin/datax.py
-fullJsonPath=E:/yonyou/DataTransfer/datax/job/fullJson.json
+#fullJsonPath=E:/yonyou/DataTransfer/datax/job/fullJson.json
 incrementJsonPath=E:/yonyou/DataTransfer/datax/job/incrementJson.json
 fileJsonPath=E:/yonyou/DataTransfer/datax/job/fileJson.json
 #maxTimeFilePath请与fullJson.json中配置的path路径一致
