--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8066
 dataxPath=E:/yonyou/DataTransfer/datax/bin/datax.py
 incrementJsonPath=E:/yonyou/DataTransfer/datax/job/incrementJson.json
 fileJsonPath=E:/yonyou/DataTransfer/datax/job/fileJson.json
-#maxTimeFilePath请与fullJson.json中配置的path路径一致
+#maxTimeFilePath请与fileJson.json中配置的path路径一致
 maxTimeFilePath=E:/yonyou/DataTransfer/datax/job/
 pythonPath=C:/Python27/python.exe
 cron=0 0/1 * * * ? 
